--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
@@ -18,6 +16,5 @@
 .env.test.local
 .env.production.local
 
+# npm
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
