--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "metoon",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "react-redux-todolist",
+    "version": "1.0.0",
+    "dependencies": {
+        "node-sass": "^4.11.0",
+        "normalize.css": "^8.0.1",
+        "react": "^16.7.0",
+        "react-app-polyfill": "^0.2.0",
+        "react-dom": "^16.7.0",
+        "react-redux": "^6.0.0",
+        "react-router-dom": "^4.3.1",
+        "react-scripts": "2.1.2",
+        "redux": "^4.0.1",
+        "todomvc-app-css": "^2.1.2"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie < 11",
+        "not op_mini all"
+    ]
 }
